added background img

--- a/index.html
+++ b/index.html
@@ -31,7 +31,13 @@
 <div class="vector">
     <p class="welcome">Welcome to midnight party</p>
     <p class="dolor">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
-
+    <button class="btn">Join Now</button>
+    
+</div>
+<div class="place">
+            <p class="park">Place: New Park Hotel <br>
+                Date: 31 December Night 2023 <br>
+                Time: Evening 7.30 pm to 12.30 am</p>
 </div>
     </main>
     <footer>
